--- a/templates/room.html
+++ b/templates/room.html
@@ -53,11 +53,12 @@
                     <video class="responsive"></video>
                     <div class="view-controls">
                         <div class="status">not connected</div>
-                        <div class="volume mute uk-icon-volume-up"></div>
-                        <div class="volume slider">
+                        <div class="button mute"></div>
+                        <div class="volume">
                             <div class="bg"></div>
                             <div class="bg active"></div>
                         </div>
+                        <div class="button fullscreen"></div>
                     </div>
                 </div>
 
@@ -72,6 +73,7 @@
             </div>
         </div>
 
+        <script src="/static/js/vendored.min.js"></script>
         <script src="/static/js/room.js"></script>
     </body>
 </html>
