--- a/templates/room.html
+++ b/templates/room.html
@@ -4,23 +4,47 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/uikit.min.css" />
-        <link rel="stylesheet" href="/static/css/everything.css" />
+        <link rel="stylesheet" href="/static/css/room.css" />
         <title>webmcast -- {{.ID}}</title>
     </head>
     <body data-stream-id="{{.ID}}">
-        <div class="chat-container uk-block uk-block-secondary uk-contrast">
+        <div class="scrollable">
+            <div class="player{{- if .Stream.HasVideo}} has-video{{end -}}
+                              {{- if .Stream.HasAudio}} has-audio{{end -}}" data-status="error">
+                {{- /* `video` with `height: auto` will always use the default aspect ratio.
+                     so instead we enforce the size of this element with an empty image. */ -}}
+                <svg width="{{.Stream.Width}}" height="{{.Stream.Height}}"></svg>
+                {{- /* this comment erases whitespace between inline elements */ -}}
+                <video></video>
+                {{- /* this one too */ -}}
+                <div class="controls">
+                    <div class="status">not connected</div>
+                    <div class="button mute"></div>
+                    <div class="volume"><div class="slider"></div></div>
+                    <div class="button fullscreen"></div>
+                </div>
+            </div>
+
+            <div class="view-info">
+                <h1 class="id">{{.ID}}</h1>
+                <h3 class="created">
+                    <span class="uk-text-muted">created on</span>
+                    {{.Stream.Created.Format "02.01.2006, 15:04:05 MST"}}
+                </h3>
+                <h3><i class="uk-icon-eye uk-text-muted"></i> <span class="viewers">{{len .Stream.Chat.Users}}</span></h3>
+            </div>
+        </div>
+
+        <div class="chat">
+            <h1>{{.ID}}</h1>
             <ul class="log">
-                <li class="empty-log">
-                    <span class="text uk-text-muted">Nothing here.</span>
-                </li>
+                <li class="empty-message">Nothing here.</li>
                 <li class="message">
                     <span class="name"></span>
                     <span class="text"></span>
                 </li>
             </ul>
-            <div class="offline-message uk-text-muted">
-                Offline.
-            </div>
+            <div class="offline-message">Offline.</div>
             <form class="login-form uk-form">
                 <fieldset>
                     <input class="input" placeholder="What's your name?" />
@@ -38,39 +62,6 @@
                     <button class="uk-button uk-button-primary" type="submit">Send</button>
                 </fieldset>
             </form>
-        </div>
-
-        <div class="content-container uk-block">
-            <div class="uk-container uk-container-center">
-                <div class="view-container
-                {{- if .Stream.HasVideo}} has-video{{end}}
-                {{- if .Stream.HasAudio}} has-audio{{end}}" data-status="error">
-                    <div class="overlay icon"></div>
-                    {{- /* `video` with `height: auto` will always use the default aspect ratio.
-                         so instead we enforce the size of this element with an empty image. */ -}}
-                    <svg width="{{.Stream.Width}}" height="{{.Stream.Height}}" class="pad responsive"></svg>
-                    {{- /* this comment erases whitespace between inline-block elements */ -}}
-                    <video class="responsive"></video>
-                    <div class="view-controls">
-                        <div class="status">not connected</div>
-                        <div class="button mute"></div>
-                        <div class="volume">
-                            <div class="bg"></div>
-                            <div class="bg active"></div>
-                        </div>
-                        <div class="button fullscreen"></div>
-                    </div>
-                </div>
-
-                <div class="view-info">
-                    <h1 class="id">{{.ID}}</h1>
-                    <h3 class="created">
-                        <span class="uk-text-muted">created on</span>
-                        {{.Stream.Created.Format "02.01.2006, 15:04:05 MST"}}
-                    </h3>
-                    <h3><i class="uk-icon-eye uk-text-muted"></i> <span class="viewers">{{len .Stream.Chat.Users}}</span></h3>
-                </div>
-            </div>
         </div>
 
         <script src="/static/js/vendored.min.js"></script>
