--- a/templates/room.html
+++ b/templates/room.html
@@ -19,9 +19,11 @@
                 {{- /* this one too */ -}}
                 <div class="controls">
                     <div class="status">not connected</div>
-                    <div class="button mute"></div>
+                    <div class="button mute" title="Mute"></div>
                     <div class="volume"><div class="slider"></div></div>
-                    <div class="button fullscreen"></div>
+                    <div class="button theatre" title="Theatre mode"></div>
+                    <div class="button fullscreen" title="Fullscreen"></div>
+                    <div class="button collapse" title="Normal view"></div>
                 </div>
             </div>
 
