Forcefully hide the <video> when offline.
Without `!important`, the `.player.is-full-screen video` selector
would override `.player:not([data-status="playing"]) video`,
setting `display` to `block` instead of `none`. If the screen
has lower vertical resolution than the video, the blank svg
will not cover the whole element, leaving a small part of the
stopped video visible at the bottom. Which is bad.

--- a/static/css/room.css
+++ b/static/css/room.css
@@ -44,7 +44,7 @@ body.theatre .player video {
 
 .player[data-status="playing"] svg,
 .player:not([data-status="playing"]) video {
-    display: none;
+    display: none !important;
 }
 
 .player:before /* overlayed status icon */ {
