Use the <template> tag for chat messages.

--- a/templates/room.html
+++ b/templates/room.html
@@ -41,11 +41,13 @@
             <h1>{{.ID}}</h1>
             <ul class="log">
                 <li class="empty-message">Nothing here.</li>
+            </ul>
+            <template class="message-template">
                 <li class="message">
                     <span class="name"></span>
                     <span class="text"></span>
                 </li>
-            </ul>
+            </template>
             <div class="offline-message">Offline.</div>
             <form class="login-form uk-form">
                 <fieldset>
