--- a/static/css/room.css
+++ b/static/css/room.css
@@ -257,6 +257,19 @@ body.no-fullscreen .player .fullscreen {
 
 /* -- colors -- */
 
+.chat ::-webkit-scrollbar {
+    width: 0.6em;
+    margin: 0.2em;
+}
+
+.chat ::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0.3);
+}
+
+.chat ::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.3);
+}
+
 .player {
     color: #fff;
     background: #000;
