--- a/static/css/room.css
+++ b/static/css/room.css
@@ -165,7 +165,7 @@ body.theatre .player video {
 }
 
 .meta {
-    display: none;  /* TODO */
+    margin-bottom: 2em;
 }
 
 .meta .avatar {
@@ -173,10 +173,44 @@ body.theatre .player video {
     margin-right: 1em;
 }
 
-.meta .viewers:before {
-    font: normal 1em FontAwesome;
+.meta h1 {
+    margin: 0;
+    font-size: 1.66em;
+    line-height: 1.5;
+}
+
+.meta h2 {
+    display: inline-block;
+    margin: 0;
+    font-size: 1.2em;
+    line-height: 1.5;  /* h1 + h2 should have a combined height of ~60px */
+}
+
+.meta h1:before,
+.meta h2:before {
     opacity: 0.5;
-    content: '\f06e';  /* .uk-icon-eye */
+}
+
+.meta .viewers {
+    margin-left: 1em;
+}
+
+.meta .viewers,
+.meta .offline {
+    opacity: 0.5;
+}
+
+.meta .creator:before {
+    content: 'by ';
+}
+
+.meta .created:before {
+    content: 'on ';
+}
+
+.meta .viewers:after {
+    font: normal 1em FontAwesome;
+    content: ' \f06e';  /* .uk-icon-eye */
 }
 
 .chat {
